rtpsession: send BYE after timeout only for internal sources that were the suggested_ssrc in the past
@gkiagia
Submitted by George Kiagiadakis Link to original bug (#780867)
Description
Created attachment 349172
rtpsession: send BYE after timeout only for internal sources that were the suggested_ssrc in the past
There is a logic in rtpsession to send BYE for internal sources that are inactive for a long time. This is basically done as an optimization, to remove stale sources that have been created in the past for internal reasons but are no longer in use (see bug 720440).
However, previously, this logic would also affect retransmission sources. Rtx sources can be inactive for some time, for a very legitimate reason (no packet loss), but we shouldn't send BYE for them because they may still be used. They should stay around as receivers (as the RFC states for all inactive senders).
Patch 349172, "rtpsession: send BYE after timeout only for internal sources that were the suggested_ssrc in the past":
0001-rtpsession-send-BYE-after-timeout-only-for-internal-.patch